--- a/Group-A/courses-open.html
+++ b/Group-A/courses-open.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./courses_open_style.css" />
+    <link rel="stylesheet" href="./courses-open.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,8 +40,12 @@
                   </a>
                 </li>
                 <li class="active">
-                  <a href="./courses.html">
+                  <a class="courses" href="./courses.html">
                     <span>Courses</span>
+                  </a>
+                  <a class="courses-open" href="./courses-open.html">
+                    <span>Courses
+                      Open</span>
                   </a>
                 </li>
                 <li>
@@ -55,7 +59,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="./contact.html">
                     <span>Contact</span>
                   </a>
                 </li>
@@ -88,7 +92,7 @@
           </p>
         </div>
         <div class="video">
-          <img id="triangle" src="./assets/icons/triangle-icon.svg" alt="" />
+          <img id="triangle" src="./assets/icons/courses-open-triangle-icon.svg" alt="" />
           <img
             id="videoCover"
             src="./assets/images/courses-open-img.png"
@@ -107,7 +111,7 @@
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
@@ -117,7 +121,7 @@
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div id="mt-fix" class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -129,7 +133,7 @@
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
@@ -148,7 +152,7 @@
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -158,7 +162,7 @@
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -168,7 +172,7 @@
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
@@ -187,7 +191,7 @@
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -197,7 +201,7 @@
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -207,7 +211,7 @@
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -226,7 +230,7 @@
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -236,7 +240,7 @@
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -246,7 +250,7 @@
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
@@ -265,7 +269,7 @@
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
               </div>
@@ -275,7 +279,7 @@
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
@@ -285,7 +289,7 @@
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
+                  <img src="./assets/icons/courses-open-clock.svg" alt="" />
                   <span>45 Minutes</span>
                 </div>
               </div>
