--- a/Group-A/signup.html
+++ b/Group-A/signup.html
@@ -23,6 +23,7 @@
       <img src="./assets/icons/header-arrow.svg" alt="arrow icon"/>
     </a>
     </div>
+
     <div class="container">
     <header>
         <div class="header">
@@ -35,14 +36,18 @@
 
             <nav>
               <ul>
-                <li class="active">
+                <li>
                   <a href="./index.html">
                     <span>Home</span>
                   </a>
                 </li>
                 <li>
-                  <a href="./courses.html">
+                  <a class="courses" href="./courses.html">
                     <span>Courses</span>
+                  </a>
+                  <a class="courses-open" href="./courses-open.html">
+                    <span>Courses
+                      Open</span>
                   </a>
                 </li>
                 <li>
@@ -56,7 +61,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="./contact.html">
                     <span>Contact</span>
                   </a>
                 </li>
@@ -83,7 +88,7 @@
 
     </header>
 
-    <main >
+    <main>
       <div class="left_side">
   <div class="birinci">
     <h1>Students Testimonials</h1>
@@ -149,8 +154,11 @@
 </div>
       </div>
     </main>
+  </div>
 
     <footer>
+      <div class="container">
+
         <div class="top-side">
           <div class="left-side">
             <div class="logo">
@@ -260,8 +268,8 @@
         <div class="bottom-side">
           <span>© 2023 Skillbridge. All rights reserved.</span>
         </div>
+      </div>
 
     </footer>
-  </div>
   </body>
 </html>
